--- a/sevenWesterosUpdate.html
+++ b/sevenWesterosUpdate.html
@@ -22,36 +22,9 @@
 
     <!--Put event to have person start to play game here-->
     <p><h3>Ready to put your nerdy knowledge to the test?</h3></p>
-    <ul id="gameStart">
-      <li id="northQuestion"></li>
-      <!--North-->
-      <form action=""><input type="text"; name="kingdomAnswer"; placeholder="Kingdom name"></form>
-      <button>Submit</button>
-      <!--Vale-->
-      <li id="valeQuestion"></li>
-      <form action=""><input type="text"; name="kingdomAnswer"; placeholder="Kingdom name"></form>
-      <button>Submit</button>
-      <!--Riverlands-->
-      <li id="riverlandsQuestion"></li>
-      <form action=""><input type="text"; name="kingdomAnswer"; placeholder="Kingdom name"></form>
-      <button>Submit</button>
-      <!--Westerlands-->
-      <li id="westerlandsQuestion"></li>
-      <form action=""><input type="text"; name="kingdomAnswer"; placeholder="Kingdom name"></form>
-      <button>Submit</button>
-      <!--Stormlands-->
-      <li id="stormlandsQuestion"></li>
-      <form action=""><input type="text"; name="kingdomAnswer"; placeholder="Kingdom name"></form>
-      <button>Submit</button>
-      <!--Reach-->
-      <li id="reachQuestion"></li>
-      <form action=""><input type="text"; name="kingdomAnswer"; placeholder="Kingdom name"></form>
-      <button>Submit</button>
-      <!--Dorne-->
-      <li id="dorneQuestion"></li>
-      <form action=""><input type="text"; name="kingdomAnswer"; placeholder="Kingdom name"></form>
-      <button>Submit</button>
-    </ul>
+      <p id="questionStart"></p>
+      <form id ="guessStart" action="submit"><input type="text"; name="kingdomAnswer"; placeholder="Kingdom name"></form>
+      <button id="compareStart">Submit</button>
 
 
     <!-- List of the seven families with links to location of the image-->
@@ -109,18 +82,15 @@
 
 <script type="text/javascript">
 window.onload = function(){
-//var game = document.getElementById("gameStart"); //can move up
-//game.textContent = testing!!!;//userInput;
+var askQuestion = document.getElementById("questionStart");
+var userGuess = document.getElementById("guessStart");
+var buttonPlay = document.getElementById("compareStart");
+buttonPlay.addEventListener("click", function(e){
+  e.preventDefault();
+  //logic function of game
+})
 
-var newText = document.createElement('li');
-var askQuestion = document.createTextNode("text test");
-newText.appendChild(askQuestion);
-var position = document.getElementById("northQuestion");
-position.appendChild(newText)
-
-//var getResponse = document.getElementById("answerResponse")
-//showCorrectResponse = getResponse.showTextContent=(kingdomArray.correctResponse[i])
-//showWrongResponse = getResponse.showTextContent=(kingdomArray.wrongResponse[i])
+}
 
 welcome = confirm("Welcome ASOIF and GOT nerds. Here your Westeros knowledge will be put to the test... Can you name all Seven kingdoms of Westeros?");
 
