--- a/sevenWesterosUpdate.html
+++ b/sevenWesterosUpdate.html
@@ -22,9 +22,11 @@
 
     <!--Put event to have person start to play game here-->
     <p><h3>Ready to put your nerdy knowledge to the test?</h3></p>
-      <p id="questionStart"></p>
-      <form id ="guessStart" action="submit"><input type="text"; name="kingdomAnswer"; placeholder="Kingdom name"></form>
-      <button id="compareStart">Submit</button>
+    <ul id="gameStart">
+      <li id="questionStart"></li>
+      <form action=""><input type="text"; name="kingdomAnswer"; placeholder="Kingdom name"></form>
+      <button>Submit</button>
+    </ul>
 
 
     <!-- List of the seven families with links to location of the image-->
@@ -82,15 +84,11 @@
 
 <script type="text/javascript">
 window.onload = function(){
-var askQuestion = document.getElementById("questionStart");
-var userGuess = document.getElementById("guessStart");
-var buttonPlay = document.getElementById("compareStart");
-buttonPlay.addEventListener("click", function(e){
-  e.preventDefault();
-  //logic function of game
-})
-
-}
+var newText = document.createElement('li');
+var askQuestion = document.createTextNode("test text");
+newText.appendChild(askQuestion);
+var position = document.getElementById("questionStart");
+position.appendChild(newText)
 
 welcome = confirm("Welcome ASOIF and GOT nerds. Here your Westeros knowledge will be put to the test... Can you name all Seven kingdoms of Westeros?");
 
@@ -159,23 +157,9 @@ if (welcome){
       alert(kingdomArray[i].wrongResponse);
     }
   }
-
-
-
 }else{
       alert("Whimp!!")
     }
   }
-
 //Will S. helped with building constructor functions!
-
-//asking of question is a function that runs each time. set up 7 questions
-
 </script>
-
-
-
-
-
-
-
